--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="contraseña">Contraseña</string>
     <string name="usuario">Usuario</string>
+    <string name="forgot_pass">¿Olvidaste la contraseña?</string>
 </resources>
